--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,8 @@
           <ul class="nav navbar-nav">
             <li><a href="<%= root_path %>" target="_self"><%= t('.home') %></a></li>
             <li class="active"><a href="<%= projects_path %>" target="_self"><%= t('.projects')%></a></li>
+            <li><%= link_to 'English', url_for( :locale => 'en' ), :target => "_self" %></li>
+            <li><%= link_to 'Spanish', url_for( :locale => 'es' ), :target => "_self" %></li>
             <!-- <li><a href="#">Documents</a></li>
             <li><a href="#">Tools</a></li> -->
           </ul>
