--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,36 +35,41 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" ><%= image_tag "logo.svg" %></a>
+          <a class="navbar-brand" href="<%= root_path %>" target="_self"><%= image_tag "logo.svg" %></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="<%= root_path %>" target="_self"><%= t('.home') %></a></li>
-            <li class="active"><a href="<%= projects_path %>" target="_self"><%= t('.projects')%></a></li>
-            <!-- <li><a href="#">Documents</a></li>
-            <li><a href="#">Tools</a></li> -->
-          </ul>
-          <ul class="nav navbar-right top-nav">
-            <li>
-                <%= link_to url_for( :locale => :en ), :target => "_self" do %>
-                EN
-                <% end %>
-            </li>
-            <li>
-                <%= link_to url_for( :locale => :es ), :target => "_self" do %>
-                ES
-                <% end %>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i><%= t('.welcome')%><%= current_user.email %> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li>
-                  <%= link_to t('layouts.application.sign_out'), destroy_user_session_path, :method => :delete %>
-                </li>
-              </ul>
-            </li>
-          </ul>
+        <div id="navbar" class="nav navbar-collapse collapse">
+          <ul class="nav navbar-nav pull-left">
+              <li><a href="<%= root_path %>" target="_self"><%= t('.home') %></a></li>
+              <li class="active"><a href="<%= projects_path %>" target="_self"><%= t('.projects')%></a></li>
+              <!-- <li><a href="#">Documents</a></li>
+              <li><a href="#">Tools</a></li> -->
+            </ul>
+            <ul class="nav navbar-nav pull-right">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Idioma<span class="caret"></span></a>
+                <ul class="dropdown-menu dropdown-menu-button thin">
+                  <li>
+                    <%= link_to url_for( :locale => 'en' ), :target => "_self" do %>
+                      EN
+                      <% end %>
+                  </li>
+                  <li>
+                      <%= link_to url_for( :locale => 'es' ), :target => "_self" do %>
+                      ES
+                      <% end %>
+                  </li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i><%= t('.welcome')%><%= current_user.email %> <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <%= link_to t('layouts.application.sign_out'), destroy_user_session_path, :method => :delete %>
+                  </li>
+                </ul>
+              </li>
+            </ul>
         </div><!-- /.navbar-collapse -->
         </div>
       </nav>
