--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
             </ul>
             <ul class="nav navbar-nav pull-right">
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Idioma<span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= t('.language')%><span class="caret"></span></a>
                 <ul class="dropdown-menu dropdown-menu-button thin">
                   <li>
                     <%= link_to url_for( :locale => 'en' ), :target => "_self" do %>
