--- a/app/views/demo/stage1.html.erb
+++ b/app/views/demo/stage1.html.erb
@@ -37,7 +37,7 @@
             <div class="bg_grey" id='real-problem'>
               <!-- <button type="button" class="btn btn-warning pull-right">Edit</button> -->
               <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
-              <button type="button" class="btn pull-right btn-warning ng-binding"><i class="fa fa-pencil" ng-class="{'fa-pencil': problem.id, 'fa-pencil': !problem.id}"></i> Editar</button>
+              <button type="button" class="btn pull-right btn-warning ng-binding"><i class="fa fa-pencil" ng-class="{'fa-pencil': problem.id, 'fa-pencil': !problem.id}"></i> Edit</button>
               <h4><i class="fa fa-circle"></i> <%= t('.subtitle1') %></h4>
             </div>
             <div class="contenedor">
