--- a/app/views/layouts/_navbar_signin.erb
+++ b/app/views/layouts/_navbar_signin.erb
@@ -17,9 +17,9 @@
           <li><a href="#testimonios"><%= t(".testimonies") %></a></li>
           <li><a href="#usanestratega"><%= t(".estratega_users") %></a></li>
     </ul>
-    <ul class="nav navbar-nav pull-right">  
+    <ul class="nav navbar-nav pull-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Idioma<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= t('.language') %><span class="caret"></span></a>
             <ul class="dropdown-menu dropdown-menu-button thin">
               <li>
                 <%= link_to url_for( :locale => 'en' ), :target => "_self" do %>
