Agregando logo de espacios abiertos

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -74,19 +74,23 @@
         <h2 class="text-white"><%= t('.title_orgs') %></h2>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-        <a href="//www.techo.org/paises/chile/" target="_blank"><%= image_tag "logo-techo.svg", class: "logos", alt: "Logo TECHO" %></a>
+
+<div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
+        <a href="//www.techo.org/paises/chile/" target="_blank"><img class="logos" alt="Logo TECHO" src="/assets/logo-techo.svg" data-pin-nopin="true"></a>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-        <a href="//www.hogardecristo.cl/" target="_blank"><%= image_tag "logo-hogar.svg", class: "logos", alt: "Logo Hogar de Cristo" %></a>
+      <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
+        <a href="//www.hogardecristo.cl/" target="_blank"><img class="logos" alt="Logo Hogar de Cristo" src="/assets/logo-hogar.svg" data-pin-nopin="true"></a>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-        <a href="//ciudadanointeligente.org/" target="_blank"><%= image_tag "logo-fci.svg", class: "logos", alt: "Logo Fundación Ciudadano Inteligente" %></a>
+      <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
+        <a href="//ciudadanointeligente.org/" target="_blank"><img class="logos" alt="Logo Fundación Ciudadano Inteligente" src="/assets/logo-fci.svg" data-pin-nopin="true"></a>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+      <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
          <a href="//bordepolitico.com/" target="_blank"><img class="logos" src="/assets/logo-borde.svg" alt="Logo Borde Político"></a>
        </div>
-    </div>
+      <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
+         <a href="//espaciosabiertos.org/" target="_blank"><img class="logos" src="/assets/espacios-abiertos.svg" alt="Logo Espacios Abiertos"></a>
+      </div>
+</div>
   </div>
 </div>
