remove field title solutions modal

--- a/app/views/projects/_solution_modal.html.erb
+++ b/app/views/projects/_solution_modal.html.erb
@@ -5,7 +5,7 @@
   <div class="modal-body">
     <form>
       <div class="form-group">
-        <label for="title"><%= t('.title') %></label>
+        <!-- <label for="title"><%= t('.title') %></label> -->
         <input type="text" name="title" class="form-control" ng-model="current_solution.title" placeholder="<%= t('.title_placeholder') %>">
       </div>
     </form>
