--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -86,8 +86,8 @@
                     <tr ng-repeat="solution in policy.solutions">
                       <td>{{ solution.title }}</td>
                       <td class="text-right">
-                        <i class="fa fa-pencil-square-o" ng-click="add_edit_solution(policy.id, solution.id)"></i>
-                        <i class="fa fa-trash" ng-click="delete_solution(problem.id, policy.id, solution)"></i>
+                        <i class="fa fa-pencil-square-o" ng-click="add_edit_solution(policy.id, solution.id)" title="<%= t('.edit') %>"></i>
+                        <i class="fa fa-trash" ng-click="delete_solution(problem.id, policy.id, solution)" title="<%= t('.delete') %>"></i>
                       </td>
                     </tr>
                   </tbody>
