javascript messages translation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,10 @@
           $('[data-toggle="tooltip"]').tooltip()
         })
     </script>
+    <script type="text/javascript">
+      I18n.defaultLocale = "<%= I18n.default_locale %>";
+      I18n.locale = "<%= I18n.locale %>";
+    </script>
     <%= csrf_meta_tags %>
   </head>
   <body ng-app="wizard-steps" >
