--- a/app/views/projects/_objective_modal.html.erb
+++ b/app/views/projects/_objective_modal.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="modal-body">
     <div class="form-group">
-      <label for="objective"><%= t('.objective') %></label>
+      <!-- <label for="objective"><%= t('.objective') %></label> -->
       <textarea name="title" class="form-control" ng-model="current_objective.title" placeholder="<%= t('.objective_placeholder') %>"></textarea>
     </div>
     <div class="form-group">
