--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -98,11 +98,14 @@
                       <i class="fa fa-check" ng-if="objective.prioritized"></i>
                     </td>
                     <td class="text-center">{{objective.solution_ids.length}}</td>
-                    <td class="text-right">
-                      <a href="#" title="Editar" ng-click="add_edit_objective(objective)"><i class="fa fa-pencil-square-o"></i></a> 
-                      <a href="" title="Priorizar" ng-click="add_edit_prioritized(objective)"><i class="fa fa-list-ol"></i></a>
-                      <a href="" title="Indicators" ng-click="add_edit_indicator(objective)"><i class="fa fa-line-chart"></i></a>
-                      <a href="#" title="Eliminar" ng-click="delete_objective(objective)"><i class="fa fa-trash"></i></a>
+                    <td class="text-center">
+                      <div class="row"
+                        <a href="#" title="Editar" ng-click="add_edit_objective(objective)"><i class="fa fa-pencil-square-o"></i></a>
+                        <a href="" title="Priorizar" ng-click="add_edit_prioritized(objective)"><i class="fa fa-list-ol"></i></a>
+                        <a href="" title="Indicators" ng-click="add_edit_indicator(objective)"><i class="fa fa-line-chart"></i></a>
+                        <a href="#" title="Eliminar" ng-click="delete_objective(objective)"><i class="fa fa-trash"></i></a>
+                      </div>
+
                     </td>
                   </tr>
                 </tbody>
