--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -100,10 +100,10 @@
                     <td class="text-center">{{objective.solution_ids.length}}</td>
                     <td class="text-center">
                       <div class="row"
-                        <a href="#" title="Editar" ng-click="add_edit_objective(objective)"><i class="fa fa-pencil-square-o"></i></a>
-                        <a href="" title="Priorizar" ng-click="add_edit_prioritized(objective)"><i class="fa fa-list-ol"></i></a>
-                        <a href="" title="Indicators" ng-click="add_edit_indicator(objective)"><i class="fa fa-line-chart"></i></a>
-                        <a href="#" title="Eliminar" ng-click="delete_objective(objective)"><i class="fa fa-trash"></i></a>
+                        <a href="#" title="<%= t('.edit') %>" ng-click="add_edit_objective(objective)"><i class="fa fa-pencil-square-o"></i></a>
+                        <a href="" title="<%= t('.prioritize') %>" ng-click="add_edit_prioritized(objective)"><i class="fa fa-list-ol"></i></a>
+                        <a href="" title="<%= t('.indicator') %>" ng-click="add_edit_indicator(objective)"><i class="fa fa-line-chart"></i></a>
+                        <a href="#" title="<%= t('.delete') %>" ng-click="delete_objective(objective)"><i class="fa fa-trash"></i></a>
                       </div>
                     </td>
                   </tr>
