improved stages 4, 5 and 6

--- a/app/views/objectives/_asks_modal.html.erb
+++ b/app/views/objectives/_asks_modal.html.erb
@@ -5,7 +5,7 @@
   <div class="modal-body">
     <form>
       <div class="form-group">
-        <label for="ask"><%= t('.ask') %></label>
+        <!-- <label for="ask"><%= t('.ask') %></label> -->
         <textarea name="description" class="form-control" rows="3" ng-model="current_ask.description" placeholder="<%= t('.ask_placeholder') %>"></textarea>
       </div>
     </form>
