--- a/app/views/outcomes/stage6.html.erb
+++ b/app/views/outcomes/stage6.html.erb
@@ -62,7 +62,7 @@
                         <th><%= t('.date') %></th>
                         <th><%= t('.activities') %></th>
                         <th><%= t('.actors') %></th>
-                        <th class="text-right">Acciones</th>
+                        <th class="text-right"><%= t('.actions') %></th>
                       </tr>
                     </thead>
                     <tbody ng-repeat="m in ask.messages track by $index">
